--- a/pages/about-service.html
+++ b/pages/about-service.html
@@ -376,8 +376,10 @@
   </footer>
 </body>
 
-<script type="module" src="../scripts/index.js"></script>
+<button class="up"></button>
 
+
+<script type="module" src="../scripts/index.js"></script>
 <script type="module" >
   initAccordion('#accordions1')
 </script>
