--- a/pages/city.html
+++ b/pages/city.html
@@ -174,7 +174,7 @@
         </li>
       </ul>
 
-      <a href="#" class="ideas__showmore">Смотреть все идеи</a>
+      <a href="./catalog.html" class="ideas__showmore">Смотреть все идеи</a>
     </section>
 
     <section class="publications">
@@ -184,20 +184,18 @@
         <li class="publications_item">
           <div class="publication">
             <div class="publication__info">
-              <a href="#" class="publication__type">Мероприятие</a>
+              <a href="#" class="publication__type">СМИ о нас</a>
               <span class="publication__filler"></span>
-              <time class="publication__date">12.08.22</time>
+              <time class="publication__date">24.03.2022</time>
             </div>  
             <a href="#" class="publication__img">
               <img  src="../images/cardimage/pub3.jpg" alt="img" class="">
             </a>
             <h2 class="publication__title">
-              <a href="#" class="">Title card</a>
+              <a href="#" class="">Разработкой мастер-плана Казанской агломерации займется Институт Генплана</a>
             </h2>
             <div class="publication__text">
-              27 января 2021 года прошло заседание Клуба BIM-Лидеров в проектировании объектов 
-              транспортной инфраструктуры. Мероприятие завершилось традиционной церемонией награждения 
-              «BIM-компании года», которой в этом году стал Институт Генплана.
+              В 2023 году стоит задача подготовить мастер-план Казанской агломерации. Об этом заявил директор Института пространственного планирования РТ.
             </div>
           </div>
         </li>
@@ -207,18 +205,16 @@
             <div class="publication__info">
               <a href="#" class="publication__type">Мероприятие</a>
               <span class="publication__filler"></span>
-              <time class="publication__date">12.08.22</time>
+              <time class="publication__date">23.02.2023</time>
             </div>  
             <a href="#" class="publication__img">
               <img  src="../images/cardimage/pub1.jpg" alt="img" class="">
             </a>
             <h2 class="publication__title">
-              <a href="#" class="">Title card</a>
+              <a href="#" class="">Город, комфортный для жизни с собаками</a>
             </h2>
             <div class="publication__text">
-              27 января 2021 года прошло заседание Клуба BIM-Лидеров в проектировании объектов 
-              транспортной инфраструктуры. Мероприятие завершилось традиционной церемонией награждения 
-              «BIM-компании года», которой в этом году стал Институт Генплана.
+              29 марта в 17:00 состоится очередная лекция онлайн-лектория Института Генплана. Урбанист Артем Гебелев расскажет о том, что такое город, комфортный для жизни с собаками.
             </div>
           </div>
         </li>
@@ -226,20 +222,18 @@
         <li class="publications_item">
           <div class="publication">
             <div class="publication__info">
-              <a href="#" class="publication__type">Мероприятие</a>
+              <a href="#" class="publication__type">СМИ о нас</a>
               <span class="publication__filler"></span>
-              <time class="publication__date">12.08.22</time>
+              <time class="publication__date">23.03.2023</time>
             </div>  
             <a href="#" class="publication__img">
               <img  src="../images/cardimage/pub2.jpg" alt="img" class="">
             </a>
             <h2 class="publication__title">
-              <a href="#" class="">Title card</a>
+              <a href="#" class="">Что такое комплексное развитие по-московски?</a>
             </h2>
             <div class="publication__text">
-              27 января 2021 года прошло заседание Клуба BIM-Лидеров в проектировании объектов 
-              транспортной инфраструктуры. Мероприятие завершилось традиционной церемонией награждения 
-              «BIM-компании года», которой в этом году стал Институт Генплана.
+              Комплексное развитие территории (КРТ) – один из ключевых градостроительных принципов в Москве. Что это значит на практике, рассказали эксперты в сюжете РБК 
             </div>
           </div>
         </li>
@@ -289,6 +283,8 @@
   </footer>
 </body>
 
+
+<button class="up"></button>
 <script src="../scripts/likes.js"></script>
 
 </html>
