--- a/pages/idea-moderation.html
+++ b/pages/idea-moderation.html
@@ -322,6 +322,8 @@
   </footer>
 </body>
 
+<button class="up"></button>
+
 <script type="module" src="../scripts/index.js"></script>
 <script src="../scripts/likes.js"></script>
 <script src="../scripts/selects.js"></script>
