--- a/pages/moderation.html
+++ b/pages/moderation.html
@@ -554,6 +554,8 @@
   </footer>
 </body>
 
+<button class="up"></button>
+
 <script type="module" src="../scripts/index.js"></script>
 <script  src="../scripts/moderation-control.js"></script>
 
