--- a/pages/project-info.html
+++ b/pages/project-info.html
@@ -113,7 +113,7 @@
               Правильно организованная велосипедная и пешеходная инфраструктура позволяет сделать город удобным для жителей, раскрыть его рекреационный потенциал.
               Опишите подробно, каких связей не хватает в городе и это предложение будет рассмотрено транспортными специалистами.
             </p>
-            <p>Ключевые темы: <strong>новые веломаршруты и пешеходные связи</strong>.</p>
+            <p>Ключевые темы: новые веломаршруты и пешеходные связи.</p>
           </div>
         </li>
 
@@ -130,7 +130,7 @@
               Здесь вы можете отметить дома, которым требуется реконструкция, указать где находятся СНТ, нуждающиеся в благоустройстве и инфраструктуризации. 
               Поделитесь своими идеями, связанными с жилыми зданиями, организацией придомовых территорий и параметрами жилой застройки.
             </p>
-            <p>Ключевые темы: <strong>новое строительство, реконструкция, развитие СНТ</strong>.</p>
+            <p>Ключевые темы: новое строительство, реконструкция, развитие СНТ.</p>
           </div>
         </li>
 
@@ -145,7 +145,7 @@
             <p>
               Новые элементы инженерной инфраструктуры могут сделать жизнь комфортнее для тысяч горожан. Ждем ваших предложений!
             </p>
-            <p>Ключевые темы: <strong>вода, газ, тепло, электричество</strong>.</p>
+            <p>Ключевые темы: вода, газ, тепло, электричество.</p>
           </div>
         </li>
 
@@ -161,7 +161,7 @@
               Российские города обладают ценным историческим наследием, которое нужно сохранить. Если вы знаете о малоизвестных, 
               но ценных объектах или хотите обратить внимание на проблемы сохранения объектов наследия — расскажите о них.
             </p>
-            <p>Ключевые темы: <strong>исторические здания, охраняемые зоны</strong>.</p>
+            <p>Ключевые темы: исторические здания, охраняемые зоны.</p>
           </div>
         </li>
 
@@ -177,7 +177,7 @@
               Эти объекты делают город уютным, безопасным и привлекательным, поэтому мнение жителей об 
               общественных пространствах крайне важно для разработчиков генплана.
             </p>
-            <p>Ключевые темы: <strong>парки, сады, скверы, бульвары, площадки для отдыха, детские площадки, придомовые и общественные пространства</strong>.</p>
+            <p>Ключевые темы: парки, сады, скверы, бульвары, площадки для отдыха, детские площадки, придомовые и общественные пространства.</p>
           </div>
         </li>
 
@@ -193,7 +193,7 @@
               Генеральный план не регулирует размещение остановок или развитие маршрутной сети, в него могут быть заложены улицы с возможностью хождения общественного транспорта, 
               а также стратегия развития железнодорожного транспорта. Если ваш район недостаточно обеспечен общественным транспортом, укажите это на карте.
             </p>
-            <p>Ключевые темы: <strong>общественный транспорт, железнодорожный транспорт</strong>.</p>
+            <p>Ключевые темы: общественный транспорт, железнодорожный транспорт.</p>
           </div>
         </li>
 
@@ -208,7 +208,7 @@
             <p>
               Укажите проблемы и слабые места в сферах природы и экологии города, чтобы специалисты могли предложить способы улучшения ситуации инструментами городского планирования.
             </p>
-            <p>Ключевые темы: <strong>загрязнение среды, мусор, водные ресурсы и объекты, зеленые насаждения и леса</strong>.</p>
+            <p>Ключевые темы: загрязнение среды, мусор, водные ресурсы и объекты, зеленые насаждения и леса.</p>
           </div>
         </li>
 
@@ -223,7 +223,7 @@
             <p>
               В этой категории вы можете обозначить районы с недостаточным обеспечением объектами социальной инфраструктуры.
             </p>
-            <p>Ключевые темы: <strong>образование, здравоохранение, социальное обслуживание, спорт</strong>.</p>
+            <p>Ключевые темы: образование, здравоохранение, социальное обслуживание, спорт.</p>
           </div>
         </li>
 
@@ -239,7 +239,7 @@
               В этой категории принимаются предложения о строительстве новых или реконструкции существующих автомобильных дорог. 
               Укажите, где вы сталкиваетесь с перегруженностью автомобильной сети.
             </p>
-            <p>Ключевые темы: <strong>дороги, перекрестки, развязки, эстакады, заторы и пробки</strong>.</p>
+            <p>Ключевые темы: дороги, перекрестки, развязки, эстакады, заторы и пробки.</p>
           </div>
         </li>
 
@@ -254,7 +254,7 @@
             <p>
               Здесь вы можете отметить, каких услуг и сервисов не хватает в городе и что бы сделало жизнь горожан и туристов удобнее.
             </p>
-            <p>Ключевые темы: <strong>досуг, коммерческая инфраструктура, общепит, торговля и услуги</strong>.</p>
+            <p>Ключевые темы: досуг, коммерческая инфраструктура, общепит, торговля и услуги.</p>
           </div>
         </li>
 
@@ -274,7 +274,7 @@
               комплексного жизнеобеспечения жителей комфортными условиями пользования городом. Поэтому нам важны ваши идеи для формирования 
               новых или изменения существующих жилых, общественных, производственных зон города.
             </p>
-            <p>Ключевые темы: <strong>функциональное назначение, тип зоны, границы функциональной зоны</strong>.</p>
+            <p>Ключевые темы: функциональное назначение, тип зоны, границы функциональной зоны.</p>
           </div>
         </li>
 
@@ -291,7 +291,7 @@
               Чем город будет жить в будущем? Какие сферы производства наиболее перспективны, а какие мешают вашему городу двигаться вперед? 
               Какие заводы необходимо вынести за черту города, а что срочно нужно построить для реализации экономического потенциала?
             </p>
-            <p>Ключевые темы: <strong>функциональное назначение, тип зоны, границы функциональной зоны</strong>.</p>
+            <p>Ключевые темы: функциональное назначение, тип зоны, границы функциональной зоны.</p>
           </div>
         </li>
 
@@ -319,8 +319,9 @@
   </footer>
 </body>
 
-<script type="module" src="../scripts/index.js"></script>
+<button class="up"></button>
 
+<script type="module" src="../scripts/index.js"></script>
 <script type="module" >
   initAccordion('#accordions1')
 </script>
