feat: анимации: курсор, линии на главной, немного рефакторинг скриптов

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   <p>Мой город</p>
                   <p>интерактивная карта городского планирования</p>
                 </div>
-                <a href="index.html" class="lead__button">Узнать подробнее</a>
+                <a href="index.html" class="lead__button withCursor">Узнать подробнее</a>
               </div>
             </div>
           </div>
@@ -108,7 +108,7 @@
                   <p>Практика</p>
                   <p>в институте генплана москвы</p>
                 </div>
-                <a href="https://praktika.genplanmos.ru/" class="lead__button">Узнать подробнее</a>
+                <a href="https://praktika.genplanmos.ru/" class="lead__button withCursor">Узнать подробнее</a>
               </div>
             </div>
           </div>
@@ -117,19 +117,19 @@
     </section>
 
     <section class="lead-buttons">
-      <a href="./pages/city.html" class="lead-buttons__button">
+      <a href="./pages/city.html" class="lead-buttons__button withCursor">
         <div class="lead-buttons__container">
           <h3 class="lead-buttons__city">Южно-Сахалинск</h3>
           <p class="lead-buttons__advice">Оставить идею</p>
         </div>
       </a>
-      <a href="./pages/city.html" class="lead-buttons__button">
+      <a href="./pages/city.html" class="lead-buttons__button withCursor">
         <div class="lead-buttons__container">
           <h3 class="lead-buttons__city">Уфа</h3>
           <p class="lead-buttons__advice">Оставить идею</p>
         </div>
       </a>
-      <a href="./pages/city.html" class="lead-buttons__button">
+      <a href="./pages/city.html" class="lead-buttons__button withCursor">
         <div class="lead-buttons__container">
           <h3 class="lead-buttons__city">Екатеринбург</h3>
           <p class="lead-buttons__advice">Оставить идею</p>
@@ -155,7 +155,7 @@
               </div>
               <ul class="city__projects">
                 <li class="city__project city__project-long">
-                  <a href="./pages/city.html" class="project">
+                  <a href="./pages/city.html" class="project withCursor withLine">
                     <h4 class="project__title">Разработка концепции развития общественных пространств набережной Городского пруда</h4>
                     <span class="project__tag">
                       Карта идей
@@ -180,8 +180,8 @@
                </p>
              </div>
              <ul class="city__projects">
-               <li class="city__project">
-                 <a href="./pages/city.html" class="project">
+               <li class="city__project ">
+                 <a href="./pages/city.html" class="project withCursor withLine">
                    <h4 class="project__title">Опрос жителей Корсаковского и Анивского городских округов</h4>
                    <span class="project__tag">
                      Карта идей
@@ -192,7 +192,7 @@
                  </a>
                </li>  
                <li class="city__project">
-                 <a href="./pages/city.html" class="project">
+                 <a href="./pages/city.html" class="project withCursor withLine">
                    <h4 class="project__title">Проект генерального плана</h4>
                    <span class="project__tag">
                      Проект генплана
@@ -203,7 +203,7 @@
                  </a>
                </li>  
                <li class="city__project">
-                 <a href="./pages/city.html" class="project">
+                 <a href="./pages/city.html" class="project withCursor withLine">
                    <h4 class="project__title">Карта идей для генплана Южно-Сахалинска</h4>
                    <span class="project__tag">
                      Проект генплана
@@ -229,7 +229,7 @@
              </div>
              <ul class="city__projects">
                <li class="city__project city__project-long">
-                 <a href="./pages/city.html" class="project">
+                 <a href="./pages/city.html" class="project withCursor withLine">
                    <h4 class="project__title">Карта идей для генплана Уфы</h4>
                    <span class="project__tag">
                      Карта идей
@@ -240,7 +240,7 @@
                  </a>
                </li>  
                <li class="city__project city__project-long">
-                 <a href="./pages/city.html" class="project">
+                 <a href="./pages/city.html" class="project withCursor withLine">
                    <h4 class="project__title">Карта идей для генплана Уфы</h4>
                    <span class="project__tag">
                      Карта идей
@@ -260,28 +260,28 @@
       <h2 class="title">Зачем нужна карта</h2>
 
       <ul class="about__list">
-        <li class="about__card">
+        <li class="about__card withLine">
           <h4 class="about__card-title">Идеи и пожелания</h4>
           <p class="about__card-text">
             С помощью сервиса горожане могут оставить на карте идеи и пожелания, касающиеся развития и изменения 
             инфраструктуры города или конкретной территории, над которой работают проектировщики.
           </p>
         </li>
-        <li class="about__card">
+        <li class="about__card withLine">
           <h4 class="about__card-title">Проектирование</h4>
           <p class="about__card-text">
             После того как идеи появляются на карте, каждый может проголосовать за те инициативы, которые поддерживает. 
             Так наши специалисты узнают, чего не хватает многим жителям или что они хотят в своем городе изменить.
           </p>
         </li>
-        <li class="about__card">
+        <li class="about__card withLine">
           <h4 class="about__card-title">Предложения к проектам</h4>
           <p class="about__card-text">
             Если проект документации предполагает этап публичного рассмотрения, то мы предлагаем ознакомиться 
             с его содержанием и проектировочными решениями на новой карте..
           </p>
         </li>
-        <li class="about__card">
+        <li class="about__card withLine">
           <h4 class="about__card-title">Что может сервис</h4>
           <p class="about__card-text">
             Платформа «Мой город» позволяет горожанам участвовать в разработке градостроительной документации и влиять 
@@ -313,7 +313,9 @@
   </footer>
 </body>
 
-<button class="up"></button>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/gsap.min.js" 
+        integrity="sha512-gsEItzcNkWxfxHjr4BaEZAd9YuRWYjxnj7c/yukcZ0/nWehUb5TjJNyyv1ApCU2DFH/qgw+stFZHPOKnoQnIuQ==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer"></script>
 <script type="module" src="./scripts/index.js"></script>
 </html>
