--- a/pages/about-service.html
+++ b/pages/about-service.html
@@ -136,7 +136,7 @@
           <li class="timeline__item">
             <div class="timeline__counter">
               <p class="timeline__step">
-                <img src="../images/icons/add-idea-icon.png" alt="1">
+                <img src="../images/icons/add-idea-icon.svg" alt="1">
               </p>
               <span class="timeline__filler"></span>
             </div>
@@ -151,7 +151,7 @@
           <li class="timeline__item">
             <div class="timeline__counter">
               <p class="timeline__step">
-                <img src="../images/icons/search-icon.png" alt="1">
+                <img src="../images/icons/search-icon.svg" alt="1">
               </p>
               <span class="timeline__filler"></span>
             </div>
@@ -166,7 +166,7 @@
           <li class="timeline__item">
             <div class="timeline__counter">
               <p class="timeline__step">
-                <img src="../images/icons/layers-icon.png" alt="1">
+                <img src="../images/icons/layers-icon.svg" alt="1">
               </p>
               <span class="timeline__filler"></span>
             </div>
@@ -181,7 +181,7 @@
           <li class="timeline__item">
             <div class="timeline__counter">
               <p class="timeline__step">
-                <img src="../images/icons/baselayers-icon.png" alt="1">
+                <img src="../images/icons/baselayers-icon.svg" alt="1">
               </p>
               <span class="timeline__filler"></span>
             </div>
@@ -196,7 +196,7 @@
           <li class="timeline__item">
             <div class="timeline__counter">
               <p class="timeline__step">
-                <img src="../images/icons/zoom-in-icon.png" alt="1">
+                <img src="../images/icons/zoom-in-icon.svg" alt="1">
               </p>
               <span class="timeline__filler"></span>
             </div>
@@ -211,7 +211,7 @@
           <li class="timeline__item">
             <div class="timeline__counter">
               <p class="timeline__step">
-                <img src="../images/icons/full-screen-icon.png" alt="1">
+                <img src="../images/icons/full-screen-icon.svg" alt="1">
               </p>
               <span class="timeline__filler"></span>
             </div>
@@ -226,7 +226,7 @@
           <li class="timeline__item">
             <div class="timeline__counter">
               <p class="timeline__step">
-                <img src="../images/icons/default-extent-icon.png" alt="1">
+                <img src="../images/icons/default-extent-icon.svg" alt="1">
               </p>
               <span class="timeline__filler"></span>
             </div>
@@ -241,7 +241,7 @@
           <li class="timeline__item">
             <div class="timeline__counter">
               <p class="timeline__step">
-                <img src="../images/icons/link-icon.png" alt="1">
+                <img src="../images/icons/link-icon.svg" alt="1">
               </p>
               <span class="timeline__filler"></span>
             </div>
@@ -256,7 +256,7 @@
           <li class="timeline__item">
             <div class="timeline__counter">
               <p class="timeline__step">
-                <img src="../images/icons/info-icon.png" alt="1">
+                <img src="../images/icons/info-icon.svg" alt="1">
               </p>
               <span class="timeline__filler"></span>
             </div>
@@ -271,7 +271,7 @@
           <li class="timeline__item">
             <div class="timeline__counter">
               <p class="timeline__step">
-                <img src="../images/icons/search-icon.png" alt="1">
+                <img src="../images/icons/search-icon.svg" alt="1">
               </p>
               <span class="timeline__filler"></span>
             </div>
@@ -285,7 +285,7 @@
           <li class="timeline__item">
             <div class="timeline__counter">
               <p class="timeline__step">
-                <img src="../images/icons/search-icon.png" alt="1">
+                <img src="../images/icons/search-icon.svg" alt="1">
               </p>
               <span class="timeline__filler"></span>
             </div>
@@ -376,11 +376,5 @@
   </footer>
 </body>
 
-<button class="up"></button>
-
-
 <script type="module" src="../scripts/index.js"></script>
-<script type="module" >
-  initAccordion('#accordions1')
-</script>
 </html>
