--- a/pages/idea.html
+++ b/pages/idea.html
@@ -256,8 +256,6 @@
   </footer>
 </body>
 
-<button class="up"></button>
 
-<script src="../scripts/likes.js"></script>
-
+<script type="module" src="../scripts/index.js"></script>
 </html>
