--- a/pages/add-idea.html
+++ b/pages/add-idea.html
@@ -147,8 +147,5 @@
   </footer>
 </body>
 
-<button class="up"></button>
-
-<script src="../scripts/likes.js"></script>
-
+<script type="module" src="../scripts/index.js"></script>
 </html>
