--- a/pages/city.html
+++ b/pages/city.html
@@ -283,8 +283,5 @@
   </footer>
 </body>
 
-
-<button class="up"></button>
-<script src="../scripts/likes.js"></script>
-
+<script type="module" src="../scripts/index.js"></script>
 </html>
