fix: стр.профиля и редактирования пароля, скрипты к ним

--- a/pages/moderation.html
+++ b/pages/moderation.html
@@ -83,7 +83,7 @@
           Мой профиль (<a href="./profile.html">ivanov@ivan.ru</a>)
         </div>
         <a href="./new-pass.html" class="profile__link">Сменить пароль</a>
-        <a href="../index.html" class="profile__link">Выйти</a>
+        <a href="./login.html" class="profile__link">Выйти</a>
       </div>
     </section>
 
