--- a/pages/profile.html
+++ b/pages/profile.html
@@ -83,12 +83,12 @@
           Мой профиль (<a href="./profile.html">ivanov@ivan.ru</a>)
         </div>
         <a href="./new-pass.html" class="profile__link">Сменить пароль</a>
-        <a href="../index.html" class="profile__link">Выйти</a>
+        <a href="./login.html" class="profile__link">Выйти</a>
 
       </div>
     </section>
 
-    <form action="" class="auth" novalidate>
+    <form action="" class="auth profile__form" novalidate>
       <fieldset class="auth__field" disabled>
         <div class="auth__input-group required">
           <label class="auth__label form__label_active" for="surname">Фамилия</label>
@@ -108,12 +108,12 @@
           <span class="auth__err"></span>
         </div>
       </fieldset>
-      <button type="submit" class="auth__button">Изменить</button>
+      <button type="button" class="auth__button">Изменить</button>
     </form>
 
   </main>
 
-  <footer class="footer footer_sticked">
+  <footer class="footer">
     <div class="footer__container">
       <img src="../images/logos/main-logo-white.svg" alt="логотип Института Генплана" class="footer__logo">
       <div class="footer__emails">
