--- a/pages/new-pass.html
+++ b/pages/new-pass.html
@@ -87,14 +87,14 @@
           Мой профиль (<a href="./profile.html">ivanov@ivan.ru</a>)
         </div>
         <a href="./profile.html" class="profile__link">Вернуться в профиль</a>
-        <a href="../index.html" class="profile__link">Выйти</a>
+        <a href="./login.html" class="profile__link">Выйти</a>
 
       </div>
     </section>
 
-    <form action="" class="auth" novalidate>
+    <form action="" class="auth newpass__form" novalidate>
 
-      <div class="auth__input-group is-invalid required">
+      <div class="auth__input-group required">
         <label class="auth__label" for="oldpass">Старый пароль</label>
         <input class="auth__input labeledinput" id="oldpass" type="password" value="" maxlength="70" required>
         <span class="auth__err">Вы указали некорректный пароль</span>
@@ -117,7 +117,7 @@
 
   </main>
 
-  <footer class="footer footer_sticked">
+  <footer class="footer">
     <div class="footer__container">
       <img src="../images/logos/main-logo-white.svg" alt="логотип Института Генплана" class="footer__logo">
       <div class="footer__emails">
