fix: ссылки до фавиконок, оформить scss для стилизации фанси-карусели, убрать лишние файлы

--- a/src/index.html
+++ b/src/index.html
@@ -111,6 +111,53 @@
           </div>
         </div>
 
+        <div class="f-carousel__slide">
+          <div class="lead__slide">
+            <picture class="lead__slide-bg">
+              <source media="(max-width: 960px)"  srcset="./images/lead2.jpg">
+              <img src="<%=require('./images/lead1.jpg')%>" alt="обложка">
+            </picture>
+          
+            <div class="lead__slide-wrapper">
+              <div class="lead__canvas">
+                <svg viewBox="0 0 1312 586" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M179.151 0.00390625L778 0V106.564L714 213.128L778 585.996H612.939L532.373 548.585C525.909 545.583 518.759 544.363 511.665 545.051L89.5 585.996L0 439.501V213.128L179.151 0.00390625Z"/>
+                </svg>
+              </div>
+              <div class="lead__title">
+                <div class="lead__title-wrapper">
+                  <p>Мой город</p>
+                  <p>интерактивная карта городского планирования</p>
+                </div>
+                <a href="index.html" class="lead__button withCursor">Узнать подробнее</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="f-carousel__slide">
+          <div class="lead__slide">
+            <picture class="lead__slide-bg">
+              <source media="(max-width: 960px)"  srcset="./images/lead2.jpg">
+              <img src="<%=require('./images/lead2.jpg')%>" alt="обложка">
+            </picture>
+          
+            <div class="lead__slide-wrapper">
+              <div class="lead__canvas">
+                <svg viewBox="0 0 1312 586" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M179.151 0.00390625L778 0V106.564L714 213.128L778 585.996H612.939L532.373 548.585C525.909 545.583 518.759 544.363 511.665 545.051L89.5 585.996L0 439.501V213.128L179.151 0.00390625Z"/>
+                </svg>
+              </div>
+              <div class="lead__title">
+                <div class="lead__title-wrapper">
+                  <p>Мой город</p>
+                  <p>интерактивная карта городского планирования</p>
+                </div>
+                <a href="index.html" class="lead__button withCursor">Узнать подробнее</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -137,7 +184,6 @@
 
     <section class="cities">
       <h2 class="title">Города и проекты, с которыми работаем</h2>
-
 
       <ul class="cities__list">
         <li class="cities__item">
