--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -3,16 +3,16 @@
 <head>
  <meta charset="UTF-8">
   <!-- For all browsers -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicons/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="120x120" href="./images/favicons/favicon-120x120.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="120x120" href="./favicons/favicon-120x120.png">
   <!-- For Google and Android -->
-  <link rel="icon" type="image/png" sizes="48x48" href="./images/favicons/favicon-48x48.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="./images/favicons/favicon-192x192.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="./favicons/favicon-48x48.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./favicons/favicon-192x192.png">
   <!-- For iPad -->
-  <link rel="apple-touch-icon" type="image/png" sizes="167x167" href="./images/favicons/favicon-167x167.png">
+  <link rel="apple-touch-icon" type="image/png" sizes="167x167" href="./favicons/favicon-167x167.png">
   <!-- For iPhone -->
-  <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../images/favicons/favicon-180x180.png">
+  <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="./favicons/favicon-180x180.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Каталог идей</title>
